apps/discobole/prod/networking/routes/httproute-disco-auth-api-redirect.yaml
# HTTPRoute to redirect HTTP to HTTPS for the Auth-Userrole API.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-disco-auth-api-redirect
  namespace: disco
spec:
  parentRefs:
    - name: gateway-disco-auth-api
      namespace: disco
      sectionName: http
  hostnames:
    - disco-auth-api.e7d.tech
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
