apps/discobole/prod/networking/routes/httproute-disco-auth-api.yaml
# HTTPRoute for HTTPS traffic to the Auth-Userrole API.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-disco-auth-api
  namespace: disco
spec:
  parentRefs:
    - name: gateway-disco-auth-api
      namespace: disco
      sectionName: https
  hostnames:
    - disco-auth-api.e7d.tech
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: auth-userrole
          port: 8080
