apps/discobole/prod/networking/routes/httproute-disco-keycloak-redirect.yaml
# HTTPRoute to redirect HTTP to HTTPS for Keycloak.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-disco-keycloak-redirect
  namespace: disco
spec:
  parentRefs:
    - name: gateway-disco-keycloak
      namespace: disco
      sectionName: http
  hostnames:
    - disco-keycloak.e7d.tech
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
