apps/discobole/prod/networking/routes/httproute-disco-pc.yaml
# HTTPRoute for HTTPS traffic to the Product Catalog UI.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-disco-pc
  namespace: disco
spec:
  parentRefs:
    - name: gateway-disco-pc
      namespace: disco
      sectionName: https
  hostnames:
    - disco-pc.e7d.tech
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: product-catalog-ui
          port: 80
